tdf#136637: handle SQLException in OStatementBase::disposing

The problem was unhandled exception thrown from destructor, resulting
in a crash.

Change-Id: Ib9d2deb2fe9745bf8df060c4e5bf6436b4ca468d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/170790
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/170856